update cards content

--- a/admin-dashboard/index.html
+++ b/admin-dashboard/index.html
@@ -134,8 +134,7 @@
             <h3>Super Cool Project</h3>
             <p class="no-scroller" title="Project info">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
-              cupiditate ex explicabo nostrum dignissimos, assumenda vel
-              repellendus officiis at velit iste iure dolorum nisi nulla.
+              cupiditate ex explicabo nostrum dignissimos, assumenda vel.
             </p>
             <div class="card-buttons">
               <input
@@ -195,8 +194,7 @@
             <h3>Calculator</h3>
             <p class="no-scroller" title="Project info">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
-              cupiditate ex explicabo nostrum dignissimos, assumenda vel
-              repellendus officiis at velit iste iure dolorum nisi nulla.
+              cupiditate ex explicabo nostrum dignissimos, assumenda vel.
             </p>
             <div class="card-buttons">
               <input
@@ -256,8 +254,7 @@
             <h3>Rock Paper Scissors</h3>
             <p class="no-scroller" title="Project info">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
-              cupiditate ex explicabo nostrum dignissimos, assumenda vel
-              repellendus officiis at velit iste iure dolorum nisi nulla.
+              cupiditate ex explicabo nostrum dignissimos, assumenda vel.
             </p>
             <div class="card-buttons">
               <input
@@ -284,8 +281,7 @@
             <h3>Crypto Night</h3>
             <p class="no-scroller" title="Project info">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
-              cupiditate ex explicabo nostrum dignissimos, assumenda vel
-              repellendus officiis at velit iste iure dolorum nisi nulla.
+              cupiditate ex explicabo nostrum dignissimos, assumenda vel.
             </p>
             <div class="card-buttons">
               <input
@@ -312,8 +308,7 @@
             <h3>Recipes</h3>
             <p class="no-scroller" title="Project info">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
-              cupiditate ex explicabo nostrum dignissimos, assumenda vel
-              repellendus officiis at velit iste iure dolorum nisi nulla.
+              cupiditate ex explicabo nostrum dignissimos, assumenda vel.
             </p>
             <div class="card-buttons">
               <input
@@ -340,8 +335,7 @@
             <h3>Ad Blocker</h3>
             <p class="no-scroller" title="Project info">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
-              cupiditate ex explicabo nostrum dignissimos, assumenda vel
-              repellendus officiis at velit iste iure dolorum nisi nulla.
+              cupiditate ex explicabo nostrum dignissimos, assumenda vel.
             </p>
             <div class="card-buttons">
               <input
@@ -368,8 +362,7 @@
             <h3>Money Maker</h3>
             <p class="no-scroller" title="Project info">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
-              cupiditate ex explicabo nostrum dignissimos, assumenda vel
-              repellendus officiis at velit iste iure dolorum nisi nulla.
+              cupiditate ex explicabo nostrum dignissimos, assumenda vel.
             </p>
             <div class="card-buttons">
               <input
@@ -396,8 +389,7 @@
             <h3>Cool Project</h3>
             <p class="no-scroller" title="Project info">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
-              cupiditate ex explicabo nostrum dignissimos, assumenda vel
-              repellendus officiis at velit iste iure dolorum nisi nulla.
+              cupiditate ex explicabo nostrum dignissimos, assumenda vel.
             </p>
             <div class="card-buttons">
               <input
