add library project to the list

--- a/index.html
+++ b/index.html
@@ -47,5 +47,11 @@
         </li>
       </ul>
     </section>
+    <section>
+      <h2>JavaScript</h2>
+      <ul>
+        <li>Project 1: <a href="./library/index.html">Library</a></li>
+      </ul>
+    </section>
   </body>
 </html>
