game logic partially implemented

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -8,5 +8,51 @@
     <link rel="stylesheet" href="style.css" />
     <script src="app.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Tic Tac Toe</h1>
+    </header>
+    <main>
+      <section id="board" class="board">
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+      </section>
+    </main>
+
+    <footer>
+      <p>Coded by Mahmoud Elnagar</p>
+      <nav class="social-links">
+        <a
+          href="https://github.com/Mahmoud-Elnagar1698"
+          target="_blank"
+          class="round-social"
+        >
+          <img src="./images/github.svg" alt="github" title="github" />
+        </a>
+
+        <a
+          href="https://www.linkedin.com/in/mahmoud-elnagar1698/"
+          target="_blank"
+          class="round-social"
+        >
+          <img src="./images/linkedin.svg" alt="linkedin" title="linkedin" />
+        </a>
+
+        <a
+          href="https://twitter.com/Elnajar_Mahmoud"
+          target="_blank"
+          class="round-social"
+        >
+          <img src="./images/twitter.svg" alt="twitter" title="twitter" />
+        </a>
+      </nav>
+    </footer>
+  </body>
 </html>
