--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="/images/favicon.svg" type="image/x-icon" />
+    <link rel="icon" href="images/favicon.svg" type="image/svg+xml" />
     <script src="app.js" defer></script>
   </head>
   <body>
