add tic-tac-toe to project list

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
       <h2>JavaScript</h2>
       <ul>
         <li>Project 1: <a href="./library/index.html">Library</a></li>
+        <li>Project 2: <a href="./tic-tac-toe/index.html">Tic Tac Toe</a></li>
       </ul>
     </section>
   </body>
