computer player option is added - random

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -91,6 +91,10 @@
                 value="Player 2"
               />
             </div>
+            <div class="check-wrapper">
+              <input type="checkbox" name="computer" id="computer" />
+              <label for="computer">Play against computer</label>
+            </div>
             <button id="start">Start</button>
           </form>
         </div>
