--- a/restaurant/src/index.html
+++ b/restaurant/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Restaurant</title>
-    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
+    <link rel="icon" type="image/png" href="./images/favicon.png" />
   </head>
   <body></body>
 </html>
