add restaurant project to list

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
       <ul>
         <li>Project 1: <a href="./library/index.html">Library</a></li>
         <li>Project 2: <a href="./tic-tac-toe/index.html">Tic Tac Toe</a></li>
+        <li>
+          Project 3: <a href="./restaurant/dist/index.html">Restaurant</a>
+        </li>
       </ul>
     </section>
   </body>
