--- a/todo/src/index.html
+++ b/todo/src/index.html
@@ -6,5 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo List</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <i class="i-btn menu-btn fa-solid fa-bars"></i>
+      <div class="logo">
+        <i class="i-logo fas fa-check-double" aria-hidden="true"></i>
+        <h1>Todo List</h1>
+      </div>
+      <i class="i-btn theme-btn fa-solid fa-moon"></i>
+    </header>
+    <aside></aside>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
