--- a/calculator/index.html
+++ b/calculator/index.html
@@ -50,7 +50,7 @@
     <footer>
       Coded By
       <a
-        href="https://www.linkedin.com/in/mahmoud-elnagar1698/"
+        href="https://www.linkedin.com/in/m-ngr/"
         target="_blank"
         title="contact me on linkedin"
       >
