--- a/crypto-night/index.html
+++ b/crypto-night/index.html
@@ -18,10 +18,7 @@
           <li><a href="">Sign up</a></li>
           <li><a href="">Login</a></li>
           <li>
-            <a
-              href="https://www.linkedin.com/in/mahmoud-elnagar1698/"
-              target="_blank"
-            >
+            <a href="https://www.linkedin.com/in/m-ngr/" target="_blank">
               Contact us
             </a>
           </li>
