--- a/etch-a-sketch/index.html
+++ b/etch-a-sketch/index.html
@@ -57,10 +57,7 @@
     </main>
     <footer>
       Coded by
-      <a
-        href="https://www.linkedin.com/in/mahmoud-elnagar1698/"
-        target="_blank"
-      >
+      <a href="https://www.linkedin.com/in/m-ngr/" target="_blank">
         Mahmoud Elnagar
       </a>
     </footer>
