--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -35,16 +35,12 @@
     <footer>
       <p>Coded by Mahmoud Elnagar</p>
       <nav class="social-links">
-        <a
-          href="https://github.com/Mahmoud-Elnagar1698"
-          target="_blank"
-          class="round-social"
-        >
+        <a href="https://github.com/m-ngr" target="_blank" class="round-social">
           <img src="./images/github.svg" alt="github" title="github" />
         </a>
 
         <a
-          href="https://www.linkedin.com/in/mahmoud-elnagar1698/"
+          href="https://www.linkedin.com/in/m-ngr/"
           target="_blank"
           class="round-social"
         >
@@ -52,7 +48,7 @@
         </a>
 
         <a
-          href="https://twitter.com/Elnajar_Mahmoud"
+          href="https://twitter.com/dev_ngr"
           target="_blank"
           class="round-social"
         >
