--- a/admin-dashboard/index.html
+++ b/admin-dashboard/index.html
@@ -23,10 +23,7 @@
           alt="Profile"
           class="round-image"
         />
-        <a
-          href="https://www.linkedin.com/in/mahmoud-elnagar1698/"
-          target="_blank"
-        >
+        <a href="https://www.linkedin.com/in/m-ngr/" target="_blank">
           Mahmoud Elnagar
         </a>
       </div>
