--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -49,10 +49,7 @@
     </main>
     <footer>
       Coded by
-      <a
-        href="https://www.linkedin.com/in/mahmoud-elnagar1698/"
-        target="_blank"
-      >
+      <a href="https://www.linkedin.com/in/m-ngr/" target="_blank">
         Mahmoud Elnagar
       </a>
     </footer>
