--- a/sign-up-form/index.html
+++ b/sign-up-form/index.html
@@ -142,10 +142,7 @@
       <footer>
         <p>
           Coded by
-          <a
-            href="https://www.linkedin.com/in/mahmoud-elnagar1698/"
-            target="_blank"
-          >
+          <a href="https://www.linkedin.com/in/m-ngr/" target="_blank">
             Mahmoud Elnagar
           </a>
         </p>
