--- a/todo/src/index.html
+++ b/todo/src/index.html
@@ -17,6 +17,8 @@
     </header>
     <aside></aside>
     <main></main>
-    <footer></footer>
+    <footer>
+      <p>Coded by Mahmoud Elnagar</p>
+    </footer>
   </body>
 </html>
