--- a/todo/src/index.html
+++ b/todo/src/index.html
@@ -15,10 +15,74 @@
       </div>
       <i class="i-btn theme-btn fa-solid fa-moon"></i>
     </header>
-    <aside></aside>
+    <aside>
+      <section>
+        <h2>Home</h2>
+        <ul class="side-list">
+          <li class="selected">
+            <i class="fa-solid fa-list-check"></i><span>All Tasks</span>
+          </li>
+          <li><i class="fa-solid fa-calendar-day"></i><span>Today</span></li>
+          <li>
+            <i class="fa-solid fa-calendar-week"></i><span>Next 7 Days</span>
+          </li>
+          <li><i class="fa-solid fa-star"></i><span>Important</span></li>
+        </ul>
+      </section>
+      <section>
+        <h2>Projects</h2>
+        <ul class="side-list">
+          <li class="selected">
+            <i class="fa-solid fa-table-list"></i>
+            <span>Project 1</span>
+            <span class="item-opt">
+              <i class="fa-solid fa-pen-to-square" title="Edit"></i>
+              <i class="fa-solid fa-xmark" title="Delete"></i>
+            </span>
+          </li>
+          <li>
+            <i class="fa-solid fa-table-list"></i>
+            <span>Project 1</span>
+            <span class="item-opt">
+              <i class="fa-solid fa-pen-to-square" title="Edit"></i>
+              <i class="fa-solid fa-xmark" title="Delete"></i>
+            </span>
+          </li>
+        </ul>
+        <button class="add-btn">
+          <i class="fa-solid fa-plus"></i> <span>Add Project</span>
+        </button>
+      </section>
+    </aside>
     <main></main>
     <footer>
       <p>Coded by Mahmoud Elnagar</p>
+      <nav class="social-links">
+        <a
+          class="social-icon"
+          title="github"
+          href="https://github.com/m-ngr"
+          target="_blank"
+        >
+          <i class="fa-brands fa-github"></i>
+        </a>
+        <a
+          class="social-icon"
+          title="linkedin"
+          href="https://www.linkedin.com/in/m-ngr/"
+          target="_blank"
+        >
+          <i class="fa-brands fa-linkedin"></i>
+        </a>
+        <a
+          class="social-icon"
+          title="twitter"
+          href="https://twitter.com/dev_ngr"
+          target="_blank"
+        >
+          <i class="fa-brands fa-twitter"></i>
+        </a>
+      </nav>
     </footer>
   </body>
 </html>
