task component is built

--- a/todo/src/index.html
+++ b/todo/src/index.html
@@ -60,48 +60,7 @@
     </aside>
     <main>
       <h2>All Tasks</h2>
-      <ul class="tasks">
-        <li class="task-item">
-          <details>
-            <summary>
-              <div class="check-wrapper">
-                <input
-                  type="checkbox"
-                  name="task-1"
-                  id="task-1"
-                  class="round-check"
-                />
-              </div>
-              <p>Task Title</p>
-              <p>06/04/2022</p>
-              <i class="fa-regular fa-star" title="Mark as Important"></i>
-              <i class="fa-solid fa-pen-to-square" title="Edit"></i>
-              <i class="fa-solid fa-xmark" title="Delete"></i>
-            </summary>
-            <p>Task details</p>
-          </details>
-        </li>
-        <li class="task-item">
-          <details>
-            <summary>
-              <div class="check-wrapper">
-                <input
-                  type="checkbox"
-                  name="task-1"
-                  id="task-1"
-                  class="round-check"
-                />
-              </div>
-              <p>Task Title</p>
-              <p>06/04/2022</p>
-              <i class="fa-regular fa-star" title="Mark as Important"></i>
-              <i class="fa-solid fa-pen-to-square" title="Edit"></i>
-              <i class="fa-solid fa-xmark" title="Delete"></i>
-            </summary>
-            <p>Task details</p>
-          </details>
-        </li>
-      </ul>
+      <ul id="task-list" class="tasks"></ul>
       <button class="add-btn">
         <i class="fa-solid fa-plus"></i> <span>Add Task</span>
       </button>
