project component is created

--- a/todo/src/index.html
+++ b/todo/src/index.html
@@ -58,13 +58,7 @@
         </button>
       </section>
     </aside>
-    <main>
-      <h2>All Tasks</h2>
-      <ul id="task-list" class="tasks"></ul>
-      <button class="add-btn">
-        <i class="fa-solid fa-plus"></i> <span>Add Task</span>
-      </button>
-    </main>
+    <main id="content"></main>
     <footer>
       <p>Coded by Mahmoud Elnagar</p>
       <nav class="social-links">
