views list implemented

--- a/todo/src/index.html
+++ b/todo/src/index.html
@@ -19,45 +19,7 @@
         <i class="fa-solid fa-sun"></i>
       </button>
     </header>
-    <aside id="sidebar">
-      <section>
-        <h2>Home</h2>
-        <ul class="side-list">
-          <li class="selected">
-            <i class="fa-solid fa-list-check"></i><span>All Tasks</span>
-          </li>
-          <li><i class="fa-solid fa-calendar-day"></i><span>Today</span></li>
-          <li>
-            <i class="fa-solid fa-calendar-week"></i><span>Next 7 Days</span>
-          </li>
-          <li><i class="fa-solid fa-star"></i><span>Important</span></li>
-        </ul>
-      </section>
-      <section>
-        <h2>Projects</h2>
-        <ul class="side-list">
-          <li class="selected">
-            <i class="fa-solid fa-table-list"></i>
-            <span>Project 1</span>
-            <span class="item-opt">
-              <i class="fa-solid fa-pen-to-square" title="Edit"></i>
-              <i class="fa-solid fa-xmark" title="Delete"></i>
-            </span>
-          </li>
-          <li>
-            <i class="fa-solid fa-table-list"></i>
-            <span>Project 1</span>
-            <span class="item-opt">
-              <i class="fa-solid fa-pen-to-square" title="Edit"></i>
-              <i class="fa-solid fa-xmark" title="Delete"></i>
-            </span>
-          </li>
-        </ul>
-        <button class="add-btn">
-          <i class="fa-solid fa-plus"></i> <span>Add Project</span>
-        </button>
-      </section>
-    </aside>
+    <aside id="sidebar"></aside>
     <main id="content"></main>
     <footer>
       <p>Coded by Mahmoud Elnagar</p>
