--- a/todo/src/index.html
+++ b/todo/src/index.html
@@ -4,18 +4,32 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      href="images/favicon.svg"
+      sizes="any"
+      type="image/svg+xml"
+    />
     <title>Todo List</title>
   </head>
   <body>
     <header>
-      <button class="base-btn" id="sidebar-btn">
+      <button
+        class="rectangle hover active-scale"
+        id="sidebar-btn"
+        title="Toggle sidebar"
+      >
         <i class="fa-solid fa-bars"></i>
       </button>
       <div class="logo">
         <i class="i-logo fas fa-check-double" aria-hidden="true"></i>
         <h1>Todo List</h1>
       </div>
-      <button class="base-btn circle" id="theme-btn" title="Toggle theme">
+      <button
+        class="circle hover active-scale"
+        id="theme-btn"
+        title="Toggle theme"
+      >
         <i class="fa-solid fa-sun"></i>
       </button>
     </header>
