add todo to project list

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <li>
           Project 3: <a href="./restaurant/dist/index.html">Restaurant</a>
         </li>
+        <li>Project 4: <a href="./todo/dist/index.html">Todo List</a></li>
       </ul>
     </section>
   </body>
