setting up layout

--- a/weather/src/index.html
+++ b/weather/src/index.html
@@ -5,6 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
+    <link
+      rel="icon"
+      href="images/favicon.svg"
+      sizes="any"
+      type="image/svg+xml"
+    />
   </head>
-  <body></body>
+  <body>
+    <div id="today-main-info"></div>
+    <div id="today-side-info"></div>
+    <div id="next-week-info"></div>
+  </body>
 </html>
