changing layout...seeking simplicity

--- a/weather/src/index.html
+++ b/weather/src/index.html
@@ -13,8 +13,41 @@
     />
   </head>
   <body>
-    <div id="today-main-info"></div>
-    <div id="today-side-info"></div>
-    <div id="next-week-info"></div>
+    <header>
+      <span class="logo"> <i class="fa-solid fa-cloud-sun"></i> </span>
+      <h1>Weather App</h1>
+    </header>
+
+    <main></main>
+
+    <footer>
+      <p>Coded by Mahmoud Elnagar</p>
+      <nav class="social-links">
+        <a
+          class="social-icon"
+          title="github"
+          href="https://github.com/m-ngr"
+          target="_blank"
+        >
+          <i class="fa-brands fa-github"></i>
+        </a>
+        <a
+          class="social-icon"
+          title="linkedin"
+          href="https://www.linkedin.com/in/m-ngr/"
+          target="_blank"
+        >
+          <i class="fa-brands fa-linkedin"></i>
+        </a>
+        <a
+          class="social-icon"
+          title="twitter"
+          href="https://twitter.com/dev_ngr"
+          target="_blank"
+        >
+          <i class="fa-brands fa-twitter"></i>
+        </a>
+      </nav>
+    </footer>
   </body>
 </html>
