--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
           Project 3: <a href="./restaurant/dist/index.html">Restaurant</a>
         </li>
         <li>Project 4: <a href="./todo/dist/index.html">Todo List</a></li>
+        <li>Project 5: <a href="./weather/dist/index.html">Weather App</a></li>
       </ul>
     </section>
   </body>
