adding cv-app to project list

--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
         </li>
         <li>Project 4: <a href="./todo/dist/index.html">Todo List</a></li>
         <li>Project 5: <a href="./weather/dist/index.html">Weather App</a></li>
+        <li>
+          Project 6:
+          <a href="https://ngr-cv-app.netlify.app/">CV Builder App</a>
+        </li>
       </ul>
     </section>
   </body>
