update project list

--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
           Project 6:
           <a href="https://ngr-cv-app.netlify.app/">CV Builder App</a>
         </li>
+        <li>
+          Project 7:
+          <a href="https://ngr-memory-card.netlify.app/">Memory Card App</a>
+        </li>
       </ul>
     </section>
   </body>
