Update project list

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         </li>
       </ul>
     </section>
+
     <section>
       <h2>Intermediate HTML and CSS</h2>
       <ul>
@@ -47,6 +48,7 @@
         </li>
       </ul>
     </section>
+
     <section>
       <h2>JavaScript</h2>
       <ul>
@@ -64,6 +66,16 @@
         <li>
           Project 7:
           <a href="https://ngr-memory-card.netlify.app/">Memory Card App</a>
+        </li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Node.js</h2>
+      <ul>
+        <li>
+          Project 1:
+          <a href="https://static-server.m-ngr.repl.co">Basic Static Server</a>
         </li>
       </ul>
     </section>
