Add MDN Library

--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@
           Project 1:
           <a href="https://static-server.m-ngr.repl.co">Basic Static Server</a>
         </li>
+        <li>
+          Project 2:
+          <a href="https://mdn-local-library-production.up.railway.app/">
+            MDN Local Library
+          </a>
+        </li>
       </ul>
     </section>
   </body>
