Add Poster Project

--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
             MDN Local Library
           </a>
         </li>
+        <li>
+          Project 3:
+          <a href="https://posters.onrender.com/"> Posters </a>
+        </li>
       </ul>
     </section>
   </body>
